# dubz_ai_bot

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  agent.py  config.py  data.py  leads.py  main.py  memory.py
data/: inventory_enriched.json
scripts/: enrich_inventory.py  test_agent.py  test_data.py  test_memory.py
ui/: app.py
